# twitter_engagement_analysis

./: .gitignore  01_model_selection.py  02_classification_workflow.py  CLAUDE.md  README.md  _quarto.yml  content_engagement_analysis.qmd  pyproject.toml  reply_link_media_engagement_analysis.md  reply_link_media_engagement_analysis.qmd  twitter_engagement_analysis.md
data/: .gitignore  account_shape.json  follower_shape.json  following_shape.json  like_shape.json  profile_shape.json  tweets_shape.json
notebooks/: _quarto.yml  content_engagement_analysis.qmd  following_analysis.qmd  reply_link_media_engagement_analysis.qmd
outputs/: content_engagement_analysis.md  following_analysis.md  reply_link_media_engagement_analysis.md
scripts/: 01_model_selection.py  02_classification_workflow.py  mutuals_extract.py
src/: __init__.py
utils/: analysis_utils.py
