[project]
name = "twitter_engagement_analysis"
version = "0.1.0"
description = "Analysis of Twitter archive download to formulate hypotheses about tweeting strategy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "litellm>=1.75.5.post1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "quarto-cli>=1.7.33",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
